--- a/rtg/public/index.html
+++ b/rtg/public/index.html
@@ -11,7 +11,8 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
 
-    <link href='http://fonts.googleapis.com/css?family=Lobster%7CRaleway:100,400,300,500,600,700%7COpen+Sans:400,500,600' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Lobster%7CFjalla+One%7CRaleway:100,400,300,500,600,700%7COpen+Sans:400,500,600' rel='stylesheet' type='text/css'>
+
 
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
