--- a/rtg/public/index.html
+++ b/rtg/public/index.html
@@ -25,7 +25,7 @@
     -->
     <title>Herzlich Willkommen bei der RTG 2018</title>
   </head>
-  <body>
+  <body style="font-family:'Roboto', sans-serif">
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
