--- a/rtg/public/index.html
+++ b/rtg/public/index.html
@@ -9,7 +9,15 @@
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+
+    <link rel="apple-touch-icon" sizes="120x120" href="/apple-touch-icon.png?v=47MWjKxJ58">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png?v=47MWjKxJ58">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png?v=47MWjKxJ58">
+    <link rel="manifest" href="/site.webmanifest?v=47MWjKxJ58">
+    <link rel="mask-icon" href="/safari-pinned-tab.svg?v=47MWjKxJ58" color="#5bbad5">
+    <link rel="shortcut icon" href="/favicon.ico?v=47MWjKxJ58">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
 
     <link href='https://fonts.googleapis.com/css?family=Lobster+Two:400,400i,700,700i%7COswald:400,600' rel='stylesheet' type='text/css'>
 
