--- a/rtg/public/index.html
+++ b/rtg/public/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
+    <!-- disallow only double tap zoom, not pinching (touch events?) -->
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, user-scalable=no">
     <meta name="theme-color" content="#000000">
     <!--
@@ -9,6 +10,7 @@
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
+    <!-- TODO P2 mobile bookmark does not work -> 'create react app' -->
 
     <link rel="apple-touch-icon" sizes="120x120" href="/apple-touch-icon.png?v=47MWjKxJ58">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png?v=47MWjKxJ58">
