Increase default font size a bit

--- a/rtg/public/index.html
+++ b/rtg/public/index.html
@@ -34,7 +34,7 @@
     -->
     <title>Herzlich Willkommen bei der RTG 2018</title>
   </head>
-  <body style="font-family:'Roboto', sans-serif">
+  <body>
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
