--- a/rtg/public/index.html
+++ b/rtg/public/index.html
@@ -22,6 +22,8 @@
 
     <link href='https://fonts.googleapis.com/css?family=Lobster+Two:400,400i,700,700i%7COswald:400,600%7CRoboto:300,300i,400,500,700' rel='stylesheet' type='text/css'>
 
+    <!-- Iconfonts required for material-ui-pickers  -->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
