--- a/rtg/public/index.html
+++ b/rtg/public/index.html
@@ -20,7 +20,8 @@
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
 
-    <link href='https://fonts.googleapis.com/css?family=Lobster+Two:400,400i,700,700i%7COswald:400,600%7CRoboto:300,300i,400,500,700' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Cormorant+Garamond:500,700%7COswald:400,600%7CRoboto:300i,400,500,700' rel='stylesheet' type='text/css'>
+
 
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
