Avoid FOIT by using font-display
Does not work on all browser but was
a recommendation from Google
Page Speed Insights in order to
ensure early rendering of text even
when the correct font has not yet
been loaded.

--- a/rtg/public/index.html
+++ b/rtg/public/index.html
@@ -20,7 +20,7 @@
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
 
-    <link href='https://fonts.googleapis.com/css?family=Cormorant+Garamond:500,700%7COswald:400,600%7CRoboto:300i,400,500,700' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Cormorant+Garamond:500,700%7COswald:400,600%7CRoboto:300i,400,500,700&display=swap' rel='stylesheet' type='text/css'>
 
 
     <!--
