--- a/rtg/public/index.html
+++ b/rtg/public/index.html
@@ -20,8 +20,9 @@
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
 
-    <link href='https://fonts.googleapis.com/css?family=Cormorant+Garamond:500,700%7COswald:400,600%7CRoboto:300i,400,500,700&display=swap' rel='stylesheet' type='text/css'>
-
+    <!-- Load google fonts asynchronously, see https://web.dev/defer-non-critical-css/#optimize -->
+    <link rel="preload" href="https://fonts.googleapis.com/css?family=Cormorant+Garamond:500,700%7COswald:400,600%7CRoboto:300i,400,500,700&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
+    <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cormorant+Garamond:500,700%7COswald:400,600%7CRoboto:300i,400,500,700&display=swap"></noscript>
 
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
